<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/nombrelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombrelabel" />

    <TextView
        android:id="@+id/txt_cRazon_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/nombrelabel"
        android:text="@string/nombrelabel"
        android:textColor="#33CC33" />

    <TextView
        android:id="@+id/detallelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombrelabel"
        android:text="@string/detallelabel" />
    
     <TextView
         android:id="@+id/detalle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/txt_cRazon_social"
         android:layout_below="@+id/txt_cRazon_social"
         android:text="@string/detallelabel" />
    
     <ImageView
        android:id="@+id/imagen"
        android:layout_alignParentRight="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="1dp" />

     <Button
         android:id="@+id/btn_cDireccion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/detalle"
         android:layout_marginTop="36dp"
         android:text="@string/editar" />

     <Button
         android:id="@+id/btn_cTelefono"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/editar"
         android:layout_alignBottom="@+id/editar"
         android:layout_toRightOf="@+id/editar"
         android:text="@string/eliminar" />

     <Button
         android:id="@+id/visita"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/editar"
         android:layout_marginTop="16dp"
         android:text="@string/visita" />

     <Button
         android:id="@+id/pedido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/presupuesto"
         android:layout_alignBottom="@+id/presupuesto"
         android:layout_toRightOf="@+id/presupuesto"
         android:text="@string/pedido" />

     <Button
         android:id="@+id/presupuesto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/visita"
         android:layout_alignBottom="@+id/visita"
         android:layout_toRightOf="@+id/visita"
         android:text="@string/presupuesto" />

   
     
</RelativeLayout>