<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:onClick="agregar_comentarios" >

    <AutoCompleteTextView
        android:id="@+id/autoClientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/cliente">

        <requestFocus />
    </AutoCompleteTextView>

    <AutoCompleteTextView
        android:id="@+id/autoEpocas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/autoClientes"
        android:ems="10"
        android:hint="@string/epoca" />

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/autoEpocas"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date" />

    <RatingBar
        android:id="@+id/ebValoracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFecha"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnAgregarComentarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ebValoracion"
        android:layout_alignRight="@+id/ebValoracion"
        android:layout_centerVertical="true"
        android:onClick="agregar_comentarios"
        android:text="@string/agregar_comentarios" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAgregarComentarios"
        android:layout_alignRight="@+id/btnAgregarComentarios"
        android:layout_below="@+id/btnAgregarComentarios"
        android:onClick="guardar"
        android:text="@string/guardar" />

</RelativeLayout>